gcc/testsuite/rust/compile/issue-3874.rs
fn wow(){
    &#[serde]
    // { dg-error "found unexpected token .#. in null denotation" "" { target *-*-* } .-1 }
}
